--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lowdb": "^1.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "reactstrap": "^8.4.1"
   },
